--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
 	"type": "module",
 	"dependencies": {
 		"@picocss/pico": "^1.5.6",
+		"elizabot": "^0.0.3",
 		"prism-themes": "^1.9.0",
-		"remark": "^14.0.2"
+		"remark": "^14.0.2",
+		"svelte-simple-modal": "^1.5.2"
 	}
 }
